--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="logo-container">
             <img src="assets/icon.png" alt="s8xg Logo" class="logo">
-            <h1 class="title">ʙᴠɴ ʀᴇᴘᴏ
+            <h1 class="title">JTIS REPO
      (Rootful/Rootless)</h1>
         </div>
         <div class="button-container">
