--- a/infodeb/index.html
+++ b/infodeb/index.html
@@ -51,4 +51,4 @@ Phiên Bản Tốt Nhất Hiện Tại.
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="file:///D:/@_Hieu/Documents/GitHub/jtisvn.github.io/index.html"/></h2></a><p><strong>Copyright © 2023 by BVN</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://jtisvn.github.io/"/></h2></a><p><strong>Copyright © 2023 by BVN</strong></p></body></bg></html>
