--- a/infodeb/index.html
+++ b/infodeb/index.html
@@ -6,7 +6,7 @@
 <br>
 <li>
 
-<red>Các bạn có thể xem hình ảnh phía dưới</red>
+<red>Các bạn có thể xem hình ảnh bên dưới</red>
 
 
 </span></li></lable><br>
@@ -31,12 +31,12 @@ Phiên Bản Tốt Nhất Hiện Tại.
 
 <tr><td>Phiên bản</td><td>
 
-1.0.0
+0.1
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-18/5/2023
+26/4/2025
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
@@ -51,4 +51,4 @@ Phiên Bản Tốt Nhất Hiện Tại.
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://jtisvn.github.io/"/></h2></a><p><strong>Copyright © 2023 by BVN</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://jtisvn.github.io/"/></h2></a><p><strong>Copyright © 2025 by JTIS</strong></p></body></bg></html>
