--- a/infodeb/index.html
+++ b/infodeb/index.html
@@ -46,9 +46,9 @@ Phiên Bản Tốt Nhất Hiện Tại.
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-14.0- 16.6.1
+14.0- 16.5
 
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://jtisvn.github.io/"/></h2></a><p><strong>Copyright © 2025 by JTIS</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="file:///D:/@_Hieu/Documents/GitHub/jtisvn.github.io/index.html"/></h2></a><p><strong>Copyright © 2025 by JTIS</strong></p></body></bg></html>
