--- a/infodeb/DLEasy/index.html
+++ b/infodeb/DLEasy/index.html
@@ -109,10 +109,10 @@ Cập nhật phiên bản ứng dụng tương thích
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-12.0-17.1
+12.0-16.6.1
 
 
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://i.imgur.com/p4IT5Xx.jpeg"/></h2></a><p><strong>Copyright © 2025 by JTIS</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://i.imgur.com/rXs0Gqe.png"/></h2></a><p><strong>Copyright © 2025 by JTIS</strong></p></body></bg></html>
