--- a/infodeb/DLEasy/index.html
+++ b/infodeb/DLEasy/index.html
@@ -77,16 +77,10 @@ Bạn có thể thu nhỏ giao diện tải xuống và tải xuống ở chế 
 
 <li>
 
-Sửa lỗi tải xuống trên Instagram.
+Hỗ trợ các ứng dụng phiên bản mới nhất
 <br>
 <li>
-Sửa lỗi tải xuống trên Threads
-<br>
-<li>
-Khắc phục một số vấn đề khác
-<br>
-<li>
-Cập nhật phiên bản ứng dụng tương thích
+Cập nhật danh sách phiên bản ứng dụng tương thích
 
 </li>
 
@@ -94,12 +88,12 @@ Cập nhật phiên bản ứng dụng tương thích
 
 <tr><td>Phiên bản</td><td>
 
-2.14.4-CRK
+2.14.7
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-27/4/202
+9/5/2025
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
