--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="container">
         <div class="logo-container">
             <img src="assets/icon.png" alt="s8xg Logo" class="logo">
-            <h1 class="title">JTIS REPO
-     (Roothide/Rootless)</h1>
+            <h1 class="title">JTISVN REPO
+    (Roothide/Rootless)</h1>
         </div>
         <div class="button-container">
             <a href="sileo://source/https://jtisvn.github.io" class="button">Thêm vào Sileo</a>
